--- a/Frontend/src/app/answerlist/answerlist.component.css
+++ b/Frontend/src/app/answerlist/answerlist.component.css
@@ -31,3 +31,23 @@
   color: var(--ligt);
   cursor: pointer;
 }
+
+.button {
+  border-radius: 4px;
+  background-color: var(--ligt);
+  border: none;
+  color: var(--dark);
+  text-align: center;
+  font-size: 14px;
+  padding: 10px;
+  width: 135px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.button:hover{
+  background-color: var(--dark);
+  color: var(--ligt);
+}
+
